# data_fetcher_algo_processor

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py
app/algorithm_providers/: algorithm_handler.py  algorithms.py
app/common/: interfaces.py  models.py
app/data_providers/: dataset_handler.py  landsat8.py  sentinel2.py
app/services/: algo_app.py  data_app.py
tests/: conftest.py  test_algorithm_providers.py  test_data_providers.py
