[tool.poetry]
name = "sentinel-fetcher-algo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
fastapi = "^0.95.0"
pystac-client = "^0.6.1"
sat-search = "^0.3.0"
boto3 = "^1.26.109"
shapely = "^2.0.1"
pip = "^23.0.1"
geojson-pydantic = "^0.5.0"
matplotlib = "^3.7.1"
rasterio = "^1.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
